# csc-exercises

./: .gitattributes  .gitignore  README.md
Auxiliary/: Indico.md  Indico.txt  IndicoDS.md  IndicoTandT.md  README  Stats.java.phase9  log.php
Auxiliary/cpuProfilingDemo/: collatz.cpp  cpuload.cpp  profile.callgrind
Auxiliary/logging/: CSC exercises summary.ipynb  README.md  getLog  getSummary  getUsers  log.09:09:38.txt  log.09:30:29.txt  log.09:56:50.txt  log.10:40:52.txt  log.11:05:21.txt  log.11:30:29.txt  log.16:11:31.txt  log.18:53:08.txt  log.23:06:22.txt  log.json  log.txt  test_log.txt  transfer.php  transfer.php.bak
CSC/: README.md  csc_get  csc_log  ex1.html  ex10.html  ex2.html  ex3.html  ex4.html  ex5.html  ex6.html  ex7.html  ex8.html  ex9.html  exA.html  exB.html  exC.html  exD.html  exF.html  exG1.html  exG2.html  exG3.html  exG3MasterRepo.tar  exG3script.sh  exG4.html  exM1.html  exM2.html  exP.html  exercise1.tar  exercise10CVS.tar  exercise10CVS.tar.old  exercise2.tar  exercise3.tar  exercise4.tar  exercise5.tar  exercise7.tar  exercise7.w.aux.files.tar  exercise8.tar  exercise9.tar  exerciseA.tar  exerciseM1.tar  (+11 more)
CSC/GitBasics1/: README.md  index.md  setup.sh
CSC/GitBasics2/: README.md  ex_script.sh  index.md  setup.csh  setup.sh
CSC/GitBisect/: GitBisect.tgz  README.md  index.md  setup.csh
CSC/GitHeadBanging/: index.md
CSC/GitHistory/: GitHistory.tgz  index.md  setup.csh
CSC/GitRecovery/: README.md  index.md  setup.csh  setup.sh
CSC/MemIntroCpp/: README.md  eight.cpp  five.cpp  four.cpp  index.md  nine.cpp  one.cpp  original.cpp  setup.csh  setup.sh  seven.cpp  six.cpp  twelve.cpp
CSC/ProfileStatsCpp/: Stats.cpp  index.html  index.md  setup.csh  setup.sh
CSC/ProfileStatsJava/: TestStats.java  analysis  index.md  java.hprof.txt  setup.csh  setup.sh
CSC/TestIntroCpp/: README.md  build  (+3 more)
DataScience/: README.md  index.md
Older/: README.md  csc_get  ex10.html  ex4C.html  ex6.html  exA.html  exB.html  exC.html  exD.html  exercise10.tar  exercise7.tar  exercise7extras.tar  exercise9.tar  exerciseB.tar
originals/: README.md
originals/exerciseM1A/: CMakeLists.txt
originals/exerciseM1A/Hello/: CMakeLists.txt  hello.cxx  hello.h
originals/exerciseM1A/Test/: CMakeLists.txt  test.cxx
originals/exerciseM2/G/: CMakeLists.txt  G.cxx  G.h  test  testG.cxx
originals/exerciseM2A/G/: CMakeLists.txt  testG.cxx
(+1360 files in other folders)
